@@ -2,7 +2,8 @@
 
 	* mpn/generic/invert.c: Mark a branch UNLIKELY.
 	* tune/tuneup.c (tune_fac_u): Update DSC_THRESHOLD minimum.
-	* gmp-impl.h (FAC_???_THRESHOLD): Update default values. 
+	* gmp-impl.h (FAC_???_THRESHOLD): Update default values.
+	(ABOVE_THRESHOLD): New definition with __builtin_constant_p.
 
 2012-05-04  Torbjorn Granlund  <tege@gmplib.org>
 
